front fix layerSwitcher legend centered on mobile

--- a/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
+++ b/packages/pentatrion-geo/src/components/layer-switcher/LayerSwitcher.scss
@@ -9,7 +9,6 @@
     max-width: 100%;
     pointer-events: auto;
     gap: .5rem;
-    // paddingTop : 2px for outline
     padding: 2px .5rem .5rem .5rem;
 
     .ll-modal-overlay {
@@ -120,6 +119,8 @@
         text-align: center;
         max-height: 2.5rem;
         text-overflow: ellipsis;
-        line-height: 1.25rem;
+        line-height: 1.5rem;
+        flex: 1;
+        width: 100%;
     }
 }
